venndb-usage/tests/fails/derive_struct_with_validator_str.stderr
error: Expected path attribute, found "employee_validator" attribute (literal)
 --> tests/fails/derive_struct_with_validator_str.rs:4:22
  |
4 | #[venndb(validator = "employee_validator")]
  |                      ^^^^^^^^^^^^^^^^^^^^
